--- a/scilab_doc/neldermead/method-spendley.tex
+++ b/scilab_doc/neldermead/method-spendley.tex
@@ -401,8 +401,7 @@ on simplex size.
 We set the maximum number of function evaluations to 400.
 The initial simplex is a regular simplex with length unity.
 
-The following Scilab script uses the neldermead algorithm to perform the 
-optimization.
+The following Scilab script allows to perform the optimization.
 
 \lstset{language=scilabscript}
 \begin{lstlisting}
